# fastapi-project-1

./: .gitignore
backend/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __main__.py
backend/app/db/: article.py
backend/app/services/: database_service.py
backend/migrations/: env.py
